Bug 626979 - Handle WebM frame size changes. r=kinetik a=blocking2.0